feat: add form, add library Respect\Validation for validate form, saving form

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,3 +1,15 @@
 FROM php:8.2-apache
 
+# Установим необходимые зависимости
+RUN apt-get update && apt-get install -y \
+    git \
+    zip \
+    unzip \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Установка расширений PHP (PDO для MySQL)
 RUN docker-php-ext-install pdo pdo_mysql
+
+# Установка Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
