feat: list fiter, router, refacotor (models, views, controllers)

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,6 +1,7 @@
 FROM php:8.2-apache
 
-# Установим необходимые зависимости
+RUN a2enmod rewrite
+
 RUN apt-get update && apt-get install -y \
     git \
     zip \
@@ -8,8 +9,8 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Установка расширений PHP (PDO для MySQL)
 RUN docker-php-ext-install pdo pdo_mysql
 
-# Установка Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+COPY apache/000-default.conf /etc/apache2/sites-available/000-default.conf
